# data_product_example

./: LICENSE  docker-compose.yaml  pyproject.toml
.localstack/cache/: machine.json
.localstack/data/: startup_info.json
data_product_experience_api/: Dockerfile  pyproject.toml  requirements.txt
data_product_experience_api/data_product_experience_api/: main.py
data_product_experience_api/tests/: test_data_product_experience_api.py
enriched_customer_events_data_product/: config.ini  main.py
tests/: acceptance_tests.py  integration_tests.py  unit_tests.py
tests/utils/: s3_utils.py  spark_utils.py
