[tool.poetry]
name = "automated_tests"
version = "0.1.0"
description = ""
authors = ["Javi Molina <javier.m@thoughtworks.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pyspark = "3.2.2"
boto3 = "^1.24.57"
requests = "2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
