[tool.poetry]
name = "data_product_experience_api"
version = "0.1.0"
description = ""
authors = ["Javi Molina <javier.m@thoughtworks.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
